# ericarthurc.com_axum_OLD

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json  sample.env
blog_posts/: 4-9-22.md  to_new_seasons.md
public/favicon/: browserconfig.xml
public/styles/: main.css
src/: main.rs
src/errors/: mod.rs
src/handlers/: about.rs  admin.rs  blog.rs  category.rs  mod.rs  series.rs
src/parsers/: meta.rs  mod.rs  parsers.rs
src/utilities/: jwt.rs
templates/: about.html.j2  admin.html.j2  blog_post.html.j2  category.html.j2  index.html.j2  not_found.html.j2  series.html.j2  series_index.html.j2
templates/includes/: header_logo.html.j2
templates/layouts/: head.html.j2
webpack/admin/: index.tsx
webpack/admin/components/: loginForm.tsx
